--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zine Arranger! For PDFs</title>
     <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
+    <style id="page-orient-style"></style>
     <script src="./pdfjs/build/pdf.js"></script>
 </head>
 
