--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                                 <div class="mb-3">
                                     <label class="form-label"><strong>Print on:</strong></label>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" id="dx-single" name="duplex" checked onchange="refreshSpecs()">
+                                        <input class="form-check-input" type="radio" id="dx-single" name="duplex" onchange="refreshSpecs()">
                                         <label class="form-check-label" for="dx-single">One Side</label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" id="dx-double" name="duplex" onchange="refreshSpecs()">
+                                        <input class="form-check-input" type="radio" id="dx-double" name="duplex" checked onchange="refreshSpecs()">
                                         <label class="form-check-label" for="dx-double">Both Sides (Duplex)</label>
                                     </div>
                                 </div>
